2009-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: fix directory creation for Java
	wrappers (thanks to Jonas Ruesch)

	* src/libYARP_OS/src/Bottle.cpp: make Bottle copies much, much
	faster.

	* example/profiling/bottle_test.cpp: do some profiling on 
	Bottles.

2009-08-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Network.h: add setNameServerName
	method for changing namespaces within a program (note: be very
	careful if you do this!)  Thanks Kyron Du Casse for prompting
	this.

2009-08-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: add patch from Dimitri Ognibene,
	java libraries need to have suffix .jnilib on OSX

	* example/swig/README: add doc patch from Dimitri Ognibene for 
	Java+Matlab

	* README: add doc patch from Dimitri Ognibene for OSX

2009-08-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameConfig.cpp: check for HOMEPATH before
	HOME when looking for config files, in order to give consistent
	behavior on windows.

2009-08-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/: initial checkin of new yarp server version,
	"yarpserver3".  This is not yet the default server, and won't be
	for a while.

	* src/libYARP_OS/src/ResourceFinder.cpp: allow for multiple
	fallback directories (default_capability) in the resource finder
	policy file.

	* src/libYARP_OS/src/ResourceFinder.cpp: give ultimate priority
	over config settings to the command line in all circumstances
	(thanks David Vernon).

	* src/libYARP_OS/harness/ResourceFinderTest.cpp: regression test
	to make sure command line can override config files for config
	settings.
	
2009-08-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/include/yarp/sig/Image.h: include a warning
	to the Image::wrapIplImage method about the required object 
	lifetime, and how this interacts with ports (thanks Bruno
	Nery).
