@@ -1,26 +1,30 @@
+cmake_minimum_required(VERSION 2.6)
+
 PROJECT (Profiling)
 
 # replace "..." with the path to your YARP binaries if needed
 SET(YARP_DIR "${CMAKE_SOURCE_DIR}/../.." CACHE LOCATION "where is yarp?")
 SET(USE_PARALLEL_PORT FALSE CACHE BOOL "Do you want to use the parallel port?")
 
-FIND_PACKAGE(YARP)
+# profiling flags for linux
+SET(CMAKE_CXX_FLAGS_PROFILING "-pg" CACHE STRING "profiling flags")
+# To use, set "CMAKE_BUILD_TYPE" in ccmake to "PROFILING"
+# Then run program as normal, e.g. "./bottle_test"
+# Then run with gprof prefix, e.g. "gprof ./bottle_test > result.txt"
+# Look at output and think.
 
+FIND_PACKAGE(YARP)
 FIND_PACKAGE(ICUB)
 
 IF (USE_PARALLEL_PORT)
-FIND_PACKAGE(PPEVENTDEBUGGER)
-
-LINK_LIBRARIES(
-  ${PPEVENTDEBUGGER_LIBRARIES}
-)
-
-INCLUDE_DIRECTORIES(
- ${PPEVENTDEBUGGER_INCLUDE_DIRS}
-)
-
-ADD_DEFINITIONS(-DUSE_PARALLEL_PORT)
-
+  FIND_PACKAGE(PPEVENTDEBUGGER)
+  LINK_LIBRARIES(
+    ${PPEVENTDEBUGGER_LIBRARIES}
+    )
+  INCLUDE_DIRECTORIES(
+    ${PPEVENTDEBUGGER_INCLUDE_DIRS}
+    )
+  ADD_DEFINITIONS(-DUSE_PARALLEL_PORT)  
 ENDIF(USE_PARALLEL_PORT)
 
 ADD_EXECUTABLE(bottle_test bottle_test.cpp)
