@@ -3,40 +3,54 @@
 #include <yarp/os/all.h>
 using namespace yarp::os;
 
-class Reader : public TypedReaderCallback<Bottle> {
-public:
-    void onRead(Bottle& datum) {
-    }
-};
-
-int main() {
+int net_test() {
     Network yarp;
+
     yarp.setLocalMode(true);
-    Reader reader;
 
-    printf("We really don't recommend you use Bottles for large data structures\n");
-    printf("But if you did, what parts gets slow first?\n");
-    printf("This is a test program for profiling purposes.\n");
-    printf("It doesn't do anything interest by itself.\n");
-
-    BufferedPort<Bottle> port, port2;
-    port2.useCallback(reader);
+    BufferedPort<Bottle> port;
+    Port port2;
     port.open("/port");
     port2.open("/port2");
     yarp.connect("/port","/port2");
 
-    for (int k=0; k<20; k++) {
+    for (int k=0; k<200; k++) {
         printf("Round %d\n", k);
         Bottle& b = port.prepare();
         b.clear();
-        for (int i=0; i<1000; i++) {
-            b.add(Value(1));
+        for (int i=0; i<10000; i++) {
+            b.add(Value(i));
         }
         port.write();
+        Bottle b2;
+        port2.read(b2);
     }
     port.close();
     port2.close();
+}
 
+int copy_test() {
+    Bottle a, b, c;
+    for (int i=0; i<1000; i++) {
+        a.add(Value(i));
+    }
+    double start = Time::now();
+    for (int i=0; i<10000; i++) {
+        b = a;
+    }
+    double stop = Time::now();
+    printf("Copies took about %g seconds\n", stop-start);
+    printf("(but use proper profiling, not this message)\n");
+}
+
+int main() {
+    printf("We don't recommend you use Bottles for large data structures\n");
+    printf("But if you did, what parts gets slow first?\n");
+    printf("This is a test program for profiling purposes.\n");
+    printf("It doesn't do anything interest by itself.\n");
+
+    net_test();
+    //copy_test();
     return 0;
 }
 
