@@ -6,8 +6,8 @@
  *
  */
 
-#ifndef _YARP2_BUFFEREDBLOCKWRITER_
-#define _YARP2_BUFFEREDBLOCKWRITER_
+#ifndef _YARP2_BUFFEREDCONNECTIONWRITER_
+#define _YARP2_BUFFEREDCONNECTIONWRITER_
 
 #include <yarp/os/ConnectionWriter.h>
 #include <yarp/os/impl/SizedWriter.h>
@@ -17,6 +17,7 @@
 #include <yarp/os/impl/StringOutputStream.h>
 
 #include <ace/Vector_T.h>
+#include <ace/OS_NS_stdlib.h>
 
 namespace yarp {
     namespace os {
@@ -30,6 +31,8 @@ namespace yarp {
     using os::ConnectionReader;
 }
 
+#define BUFFERED_CONNECTION_INITIAL_POOL_SIZE (1024)
+
 /**
  * A helper for creating cached object descriptions.
  */
@@ -40,6 +43,7 @@ public:
         reader = NULL;
         target = &lst;
         ref = NULL;
+        stopPool();
     }
 
     virtual ~BufferedConnectionWriter() {
@@ -64,13 +68,49 @@ public:
             delete header[i];
         }
         header.clear();
+        stopPool();
+    }
+
+    bool addPool(const Bytes& data) {
+        if (pool!=NULL) {
+            if (data.length()+poolIndex>pool->length()) {
+                pool = NULL;
+            }
+        }
+        if (pool==NULL && data.length()<poolLength) {
+            pool = new ManagedBytes(poolLength);
+            if (pool==NULL) { return false; }
+            poolCount++;
+            poolIndex = 0;
+            if (poolLength<65536) {
+                poolLength *= 2;
+            }
+            pool->setUsed(0);
+            target->push_back(pool);
+        }
+        if (pool!=NULL) {
+            ACE_OS::memcpy(pool->get()+poolIndex,data.get(),data.length());
+            poolIndex += data.length();
+            pool->setUsed(poolIndex);
+            return true;
+        }
+        return false;
+    }
+    
+    void stopPool() {
+        pool = NULL;
+        poolIndex = 0;
+        poolLength = BUFFERED_CONNECTION_INITIAL_POOL_SIZE;
+        poolCount = 0;
     }
 
     virtual void appendBlock(const Bytes& data) {
+        stopPool();
         target->push_back(new ManagedBytes(data,false));
     }
 
     virtual void appendBlockCopy(const Bytes& data) {
+        if (addPool(data)) return;
         ManagedBytes *buf = new ManagedBytes(data,false);
         buf->copy();
         target->push_back(buf);
@@ -79,6 +119,7 @@ public:
     virtual void appendInt(int data) {
         NetType::NetInt32 i = data;
         Bytes b((char*)(&i),sizeof(i));
+        if (addPool(b)) return;
         ManagedBytes *buf = new ManagedBytes(b,false);
         buf->copy();
         target->push_back(buf);
@@ -87,6 +128,7 @@ public:
     virtual void appendDouble(double data) {
         NetType::NetFloat64 i = data;
         Bytes b((char*)(&i),sizeof(i));
+        if (addPool(b)) return;
         ManagedBytes *buf = new ManagedBytes(b,false);
         buf->copy();
         target->push_back(buf);
@@ -94,6 +136,7 @@ public:
 
     virtual void appendStringBase(const String& data) {
         Bytes b((char*)(data.c_str()),data.length()+1);
+        if (addPool(b)) return;
         ManagedBytes *buf = new ManagedBytes(b,false);
         buf->copy();
         target->push_back(buf);
@@ -101,19 +144,18 @@ public:
 
     virtual void appendBlock(const String& data) {
         Bytes b((char*)(data.c_str()),data.length()+1);
+        if (addPool(b)) return;
         ManagedBytes *buf = new ManagedBytes(b,false);
         target->push_back(buf);
     }
 
     virtual void appendLine(const String& data) {
         String copy = data;
-        copy += "\r\n"; // better windows support
-        //copy += '\n';
+        copy += "\r\n"; // for windows compatibility
         Bytes b((char*)(copy.c_str()),copy.length());
+        if (addPool(b)) return;
         ManagedBytes *buf = new ManagedBytes(b,false);
         buf->copy();
-
-        //ACE_DEBUG((LM_DEBUG,"adding a line - %d bytes", copy.length()));
 
         target->push_back(buf);
     }
@@ -126,11 +168,11 @@ public:
 		unsigned int i;
         for (i=0; i<header.size(); i++) {
             ManagedBytes& b = *(header[i]);
-            os.write(b.bytes());
+            os.write(b.usedBytes());
         }
         for (i=0; i<lst.size(); i++) {
             ManagedBytes& b = *(lst[i]);
-            os.write(b.bytes());
+            os.write(b.usedBytes());
         }    
     }
 
@@ -141,10 +183,10 @@ public:
     virtual int length(int index) {
         if (index<(int)header.size()) {
             ManagedBytes& b = *(header[index]);
-            return b.length();
+            return b.used();
         }
         ManagedBytes& b = *(lst[index-header.size()]);
-        return b.length();
+        return b.used();
     }
 
     virtual const char *data(int index) {
@@ -201,6 +243,7 @@ public:
     virtual bool convertTextMode();
 
     void addToHeader() {
+        stopPool();
         target = &header;
     }
 
@@ -228,6 +271,10 @@ private:
     ACE_Vector<ManagedBytes *> lst;
     ACE_Vector<ManagedBytes *> header;
     ACE_Vector<ManagedBytes *> *target;
+    ManagedBytes *pool;
+    int poolIndex;
+    int poolCount;
+    int poolLength;
     PortReader *reader;
     bool textMode;
     yarp::os::Portable *ref;
